# autonomous-car-2020

./: .gitignore  DOCKER-GUIDE.md  Dockerfile  README.md  docker_build.sh  docker_run.sh  run.sh
main_ws/: environment.yml
main_ws/src/: Dockerfile
main_ws/src/lane_detect/src/: carcontrol.cpp
main_ws/src/team613/: CMakeLists.txt  package.xml
main_ws/src/team613/data/: semantic_seg_ENet.conf.json  semantic_seg_UNet.conf.json
main_ws/src/team613/launch/: team613.launch
main_ws/src/team613/src/: car_controller.py  config.py  debug_stream.py  image_processor.py  keep_running_node.py
main_ws/src/team613/src/obstacle_detection/: depth_processor.py  obstacle_detector.py
main_ws/src/team613/src/semantic_segmentation/: traffic_objects.py
main_ws/src/team613/src/sign_detection/: sign_detector.py
main_ws/src/team613/src/sign_detection_faceboxes/: sign_detector.py
main_ws/src/team806/: CMakeLists.txt  package.xml
main_ws/src/team806/data/: blue.color  blue2.color  config.yaml  config_trafficsign.yaml  list.txt  svm_an_linear.xml
main_ws/src/team806/data/object_hog_files/: object1.yml  object1_an.yml  object1_v2.yml  object1_v3.yml  object2_v1.yml  object2_v2.yml  object3_v1.yml
main_ws/src/team806/include/: config.h  image_publisher.h  timer.h
main_ws/src/team806/include/lane_detector/: lane_detector.h  road.h
main_ws/src/team806/include/object_detector/: detected_object.h  hog_based_object_detector.h  object_detector.h  object_detector_manager.h  templ_matching_object_detector.h
main_ws/src/team806/include/obstacle_detector/: obstacle_detector.h
main_ws/src/team806/include/smart_control/: PID.h  car_control.h
main_ws/src/team806/include/traffic_sign/: color_range.h  traffic_sign.h  traffic_sign_detector.h  traffic_sign_detector_2.h
main_ws/src/team806/launch/: racecar.launch  team806.launch
main_ws/src/team806/src/: config.cpp  manual_control.cpp  racecar.cpp
main_ws/src/team806/src/lane_detector/: lane_detector.cpp
main_ws/src/team806/src/object_detector/: detected_object.cpp  hog_based_object_detector.cpp  object_detector_manager.cpp  templ_matching_object_detector.cpp
main_ws/src/team806/src/smart_control/: PID.cpp  car_control.cpp
main_ws/src/team806/src/traffic_sign/: traffic_sign.cpp  traffic_sign_detector.cpp  traffic_sign_detector_2.cpp
main_ws/src/teamict/: CMakeLists.txt  Dockerfile  README.md  package.xml
main_ws/src/teamict/data/: lane_detector.conf.json  semantic_seg_ENet.conf.json  semantic_seg_UNet.conf.json  sign_detector.conf.json
main_ws/src/teamict/launch/: server.launch  teamict.launch
main_ws/src/teamict/src/: car_control.py  car_controller.py  config.py  debug_stream.py  depth_processor.py  image_processor.py  keep_running_node.py  model_keras.py  param.py  sign_detector.py  teamict_node.py  traffic_sign_node.py
main_ws/src/teamict/src/lane_detection/: lane_detector.py
main_ws/src/teamict/src/obstacle_detection/: obstacle_detector.py
main_ws/src/teamict/src/semantic_segmentation/: semantic_segmentation.py
main_ws/src/teamict/src/sign_detection/: sign_detector.py
main_ws/src/teamict/src/sign_detection_faceboxes/: sign_detector.py
main_ws/src/video_stream/src/: main.cpp
scripts/: install_opencv_3.sh
(+18 files in other folders)
